--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -14,32 +14,126 @@ header {
     font-size: size(logo);
     text-transform: uppercase;
     font-weight: weight(black);
-    .period {
-        color: color(secondary);
-    }
 }
 
+.highlight {
+    color: color(secondary);
+}
+// Animated Link Underline by:
+// https://tobiasahlin.com/blog/css-trick-animating-link-underlines/
 .header-nav {
     ul {
         list-style: none;
         display: flex;
+        margin-right: 25px;
         li {
-            padding: 0 50px;
+            padding: 0 60px;
             &:nth-child(3) {
                 padding-right: 0;
             }
             a {
                 text-decoration: none;
-                color: #000;
+                color: color(tertiary);
                 font-size: size(nav-links);
                 font-weight: weight(black);
                 text-transform: uppercase;
+                position: relative;
+            }
+            a::before {
+                content: "";
+                position: absolute;
+                width: 100%;
+                height: 2px;
+                bottom: 0;
+                left: 0;
+                background-color: color(primary);
+                visibility: hidden;
+                transform: scaleX(0);
+                transition: all 0.3s ease-in-out 0s;
+            }
+            a:hover::before {
+                visibility: visible;
+                transform: scaleX(1);
             }
         }
     }
 }
 
+
 .welcome {
     display: flex;
-    justify-content: space-between;
+    position: relative;
+    align-items: flex-end;
 }
+
+.greeting {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 490px;
+    align-items: flex-start;
+    position: relative;
+    z-index: 1;
+}
+
+.greeting-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 240px;
+}
+
+.hello {
+    font-size: size(hello);
+    text-transform: uppercase;
+    width: 700px;
+}
+
+.name {
+    display: inline-block;
+    width: 700px;
+    font-size: size(name);
+}
+
+.sub-title {
+    font-size: size(sub-title);
+    font-weight: weight(light);
+}
+
+.box {
+    position: absolute;
+    width: 500px;
+    height: 500px;
+    background: color(tertiary);
+    right: 0;
+    top: 40px;
+    &::before {
+        content: url(/assets/pgram.svg);
+        display: inline-block;
+        position: absolute;
+        z-index: -1;
+        top: -140px;
+        right: 0px;
+    }
+    img {
+        position: absolute;
+        top: 40px;
+        right: 40px;
+        width: 550px;
+    }
+}
+
+.hire-me {
+    background: color(primary);
+    color: color(quaternary);
+    font-size: size(button);
+    font-weight: weight(black);
+    text-transform: uppercase;
+    text-decoration: none;
+    display: inline-block;
+    padding: 20px 60px;
+    i {
+        padding-right: 30px;
+    }
+}
+
