--- a/styles/style.css
+++ b/styles/style.css
@@ -285,7 +285,7 @@ header {
   font-weight: 900;
 }
 
-.logo .period {
+.highlight {
   color: #FE5D44;
 }
 
@@ -294,10 +294,11 @@ header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin-right: 25px;
 }
 
 .header-nav ul li {
-  padding: 0 50px;
+  padding: 0 60px;
 }
 
 .header-nav ul li:nth-child(3) {
@@ -310,15 +311,128 @@ header {
   font-size: 2rem;
   font-weight: 900;
   text-transform: uppercase;
+  position: relative;
+}
+
+.header-nav ul li a::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #1A196D;
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+.header-nav ul li a:hover::before {
+  visibility: visible;
+  -webkit-transform: scaleX(1);
+          transform: scaleX(1);
 }
 
 .welcome {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  position: relative;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.greeting {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  height: 490px;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  position: relative;
+  z-index: 1;
+}
+
+.greeting-text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 240px;
+}
+
+.hello {
+  font-size: 3.8rem;
+  text-transform: uppercase;
+  width: 700px;
+}
+
+.name {
+  display: inline-block;
+  width: 700px;
+  font-size: 9.7rem;
+}
+
+.sub-title {
+  font-size: 4.3rem;
+  font-weight: 300;
+}
+
+.box {
+  position: absolute;
+  width: 500px;
+  height: 500px;
+  background: #000;
+  right: 0;
+  top: 40px;
+}
+
+.box::before {
+  content: url(/assets/pgram.svg);
+  display: inline-block;
+  position: absolute;
+  z-index: -1;
+  top: -140px;
+  right: 0px;
+}
+
+.box img {
+  position: absolute;
+  top: 40px;
+  right: 40px;
+  width: 550px;
+}
+
+.hire-me {
+  background: #1A196D;
+  color: #FFF;
+  font-size: 3.2rem;
+  font-weight: 900;
+  text-transform: uppercase;
+  text-decoration: none;
+  display: inline-block;
+  padding: 20px 60px;
+}
+
+.hire-me i {
+  padding-right: 30px;
 }
 
 @media screen and (max-width: 640px) {
@@ -342,8 +456,11 @@ header {
   }
 }
 
-@media screen and (min-width: 1230px) {
+@media screen and (min-width: 1440.1px) {
   body {
     font-size: 1.6rem;
+  }
+  .box img {
+    width: unset;
   }
 }
