--- a/styles/sass/_responsive.scss
+++ b/styles/sass/_responsive.scss
@@ -79,12 +79,63 @@ $max: max-width;
 }
 
 @include mediaQuery($min, $tablet) {
-    body {
-      font-size: size(body) * 0.875;
+  
+  body {
+    font-size: size(body) * 0.875;
+  }
+    
+  .header-nav {
+    position: unset;
+    z-index: unset;
+    background: unset;
+    top: unset;
+    right: unset;
+    width: unset;
+    height: unset;
+
+    ul {
+        margin: unset;
+        display: flex;
+        margin-right: 25px;
+        width: unset;
+        li {
+            margin: unset;
+            text-align: unset;
+            padding: 0 60px;
+            
+            &:nth-child(3) {
+                padding-right: 0;
+            
+            }
+            a {
+                text-decoration: none;
+                color: color(tertiary);
+                font-size: size(nav-links);
+                font-weight: weight(black);
+                text-transform: uppercase;
+                position: relative;
+            }
+            a::before {
+                content: "";
+                position: absolute;
+                width: 100%;
+                height: 2px;
+                bottom: 0;
+                left: 0;
+                background-color: color(primary);
+                visibility: hidden;
+                transform: scaleX(0);
+                transition: all 0.3s ease-in-out 0s;
+            }
+            a:hover::before {
+                visibility: visible;
+                transform: scaleX(1);
+            }
+        }
     }
-    .box img {
-      // width: 550px;
-    }
+} 
+
+
 }
 
 @include mediaQuery($min, $post-desktop) {
