--- a/styles/style.css
+++ b/styles/style.css
@@ -235,118 +235,6 @@ html {
   overflow: hidden;
 }
 
-html {
-  font-size: 62.5%;
-  font-family: "Source Sans Pro", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-html, body, p, h1, h2, h3, h4, h5, h6, nav, ul, li, a, section, div, main, footer, button {
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  font-size: 1.6rem;
-}
-
-.wrapper {
-  width: calc(100% - 40px);
-  margin: 0 auto;
-}
-
-header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-.navigation {
-  height: 100px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.logo {
-  font-size: 3.3rem;
-  text-transform: uppercase;
-  font-weight: 900;
-}
-
-.mobile-menu-button {
-  background: none;
-  border: none;
-  position: relative;
-  z-index: 3;
-}
-
-.highlight {
-  color: #FE5D44;
-}
-
-.header-nav {
-  position: absolute;
-  z-index: 2;
-  background: rgba(255, 255, 255, 0.95);
-  top: 0;
-  right: 0;
-  width: 100%;
-  height: 100vh;
-}
-
-.header-nav ul {
-  margin: 100px auto 0 auto;
-  list-style: none;
-  width: calc(100% - 40px);
-}
-
-.header-nav ul li {
-  margin: 20px 0;
-  text-align: center;
-}
-
-.header-nav ul li a {
-  text-decoration: none;
-  color: #000;
-  font-size: 2rem;
-  font-weight: 900;
-  text-transform: uppercase;
-  position: relative;
-}
-
-.header-nav ul li a::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  bottom: 0;
-  left: 0;
-  background-color: #1A196D;
-  visibility: hidden;
-  -webkit-transform: scaleX(0);
-          transform: scaleX(0);
-  -webkit-transition: all 0.3s ease-in-out 0s;
-  transition: all 0.3s ease-in-out 0s;
-}
-
-.header-nav ul li a:hover::before {
-  visibility: visible;
-  -webkit-transform: scaleX(1);
-          transform: scaleX(1);
-}
-
 .slide-in-bottom {
   -webkit-animation: slide-in-bottom 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
   animation: slide-in-bottom 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
@@ -431,14 +319,120 @@ header {
   }
 }
 
-.welcome {
+html {
+  font-size: 62.5%;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+html, body, p, h1, h2, h3, h4, h5, h6, nav, ul, li, a, section, div, main, footer, button {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-size: 1.6rem;
+}
+
+.wrapper {
+  width: calc(100% - 40px);
+  margin: 0 auto;
+}
+
+header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.navigation {
+  height: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.logo {
+  font-size: 3.3rem;
+  text-transform: uppercase;
+  font-weight: 900;
+}
+
+.mobile-menu-button {
+  background: none;
+  border: none;
   position: relative;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  z-index: 3;
+}
+
+.highlight {
+  color: #1A196D;
+}
+
+.header-nav {
+  position: absolute;
+  z-index: 2;
+  background: rgba(255, 255, 255, 0.95);
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100vh;
+}
+
+.header-nav ul {
+  margin: 100px auto 0 auto;
+  list-style: none;
+  width: calc(100% - 40px);
+}
+
+.header-nav ul li {
+  margin: 20px 0;
+  text-align: center;
+}
+
+.header-nav ul li a {
+  text-decoration: none;
+  color: #000;
+  font-size: 2rem;
+  font-weight: 900;
+  text-transform: uppercase;
+  position: relative;
+}
+
+.header-nav ul li a::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #1A196D;
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+.header-nav ul li a:hover::before {
+  visibility: visible;
+  -webkit-transform: scaleX(1);
+          transform: scaleX(1);
+}
+
+.welcome {
+  position: relative;
 }
 
 .greeting {
@@ -452,12 +446,13 @@ header {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  height: 490px;
+  height: 350px;
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
   position: relative;
   z-index: 1;
+  margin-bottom: 40px;
 }
 
 .greeting-text {
@@ -477,24 +472,22 @@ header {
 .hello {
   font-size: 3.8rem;
   text-transform: uppercase;
-  width: 700px;
+  width: 100%;
 }
 
 .name {
   display: inline-block;
-  width: 700px;
   font-size: 9.7rem;
 }
 
 .sub-title {
   font-size: 4.3rem;
   font-weight: 300;
+  width: 100%;
 }
 
 .box {
-  position: absolute;
-  width: 500px;
-  height: 500px;
+  width: 100%;
   background: #000;
   right: 0;
   top: 40px;
@@ -505,15 +498,15 @@ header {
   display: inline-block;
   position: absolute;
   z-index: -1;
-  top: -140px;
+  top: 0;
   right: 0px;
 }
 
 .box img {
-  position: absolute;
   top: 40px;
   right: 40px;
-  width: 550px;
+  width: 100%;
+  display: block;
 }
 
 .hire-me {
@@ -525,6 +518,9 @@ header {
   text-decoration: none;
   display: inline-block;
   padding: 20px 60px;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
 }
 
 .hire-me i {
@@ -535,6 +531,24 @@ header {
   body {
     font-size: 1.12rem;
   }
+  .logo {
+    font-size: 2.31rem;
+  }
+  .header-nav ul li a {
+    font-size: 1.4rem;
+  }
+  .hello {
+    font-size: 2.66rem;
+  }
+  .name {
+    font-size: 6.79rem;
+  }
+  .sub-title {
+    font-size: 3.01rem;
+  }
+  .hire-me {
+    font-size: 2.24rem;
+  }
 }
 
 @media screen and (min-width: 640px) {
@@ -544,11 +558,47 @@ header {
   body {
     font-size: 1.2rem;
   }
+  .logo {
+    font-size: 2.475rem;
+  }
+  .header-nav ul li a {
+    font-size: 1.5rem;
+  }
+  .hello {
+    font-size: 2.85rem;
+  }
+  .name {
+    font-size: 7.275rem;
+  }
+  .sub-title {
+    font-size: 3.225rem;
+  }
+  .hire-me {
+    font-size: 2.4rem;
+  }
 }
 
 @media screen and (min-width: 768px) {
   body {
     font-size: 1.4rem;
+  }
+  .logo {
+    font-size: 2.8875rem;
+  }
+  .header-nav ul li a {
+    font-size: 1.75rem;
+  }
+  .hello {
+    font-size: 3.325rem;
+  }
+  .name {
+    font-size: 8.4875rem;
+  }
+  .sub-title {
+    font-size: 3.7625rem;
+  }
+  .hire-me {
+    font-size: 2.8rem;
   }
   .header-nav {
     position: unset;
@@ -602,11 +652,113 @@ header {
     -webkit-transform: scaleX(1);
             transform: scaleX(1);
   }
+  .welcome {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    position: relative;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+  }
+  .greeting {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    height: 490px;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    position: relative;
+    z-index: 1;
+    margin-bottom: unset;
+  }
+  .greeting-text {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    height: 240px;
+  }
+  .hello {
+    font-size: 3.8rem;
+    text-transform: uppercase;
+    width: 700px;
+  }
+  .name {
+    display: inline-block;
+    width: 700px;
+    font-size: 9.7rem;
+  }
+  .sub-title {
+    font-size: 4.3rem;
+    font-weight: 300;
+    width: 100%;
+  }
+  .box {
+    position: absolute;
+    width: 500px;
+    height: 500px;
+    background: #000;
+    right: 0;
+    top: 40px;
+  }
+  .box::before {
+    content: url(/assets/pgram.svg);
+    display: inline-block;
+    position: absolute;
+    z-index: -1;
+    top: -140px;
+    right: 0px;
+  }
+  .box img {
+    position: absolute;
+    top: 40px;
+    right: 40px;
+    width: 550px;
+    display: block;
+  }
+  .hire-me {
+    -ms-flex-item-align: unset;
+        -ms-grid-row-align: unset;
+        align-self: unset;
+  }
 }
 
 @media screen and (min-width: 1440.1px) {
   body {
     font-size: 1.6rem;
+  }
+  .logo {
+    font-size: 3.3rem;
+  }
+  .header-nav ul li a {
+    font-size: 2rem;
+  }
+  .hello {
+    font-size: 3.8rem;
+  }
+  .name {
+    font-size: 9.7rem;
+  }
+  .sub-title {
+    font-size: 4.3rem;
+  }
+  .hire-me {
+    font-size: 3.2rem;
   }
   .box img {
     width: unset;
