--- a/styles/sass/_responsive.scss
+++ b/styles/sass/_responsive.scss
@@ -75,7 +75,7 @@ $max: max-width;
     .hello {
       font-size: size(hello) * 0.70;
     }
-    .name {
+    .name, .section-heading {
       font-size: size(name) * 0.70;
     }
     .sub-title {
@@ -84,7 +84,6 @@ $max: max-width;
     .hire-me {
       font-size: size(button) * 0.70;
     }
-
 
 } // END OF MOBILE MEDIA QUERY
 
@@ -105,7 +104,7 @@ $max: max-width;
     .hello {
       font-size: size(hello) * 0.75;
     }
-    .name {
+    .name, .section-heading {
       font-size: size(name) * 0.75;
     }
     .sub-title {
@@ -131,7 +130,7 @@ $max: max-width;
   .hello {
     font-size: size(hello) * 0.875;
   }
-  .name {
+  .name, .section-heading {
     font-size: size(name) * 0.875;
   }
   .sub-title {
@@ -159,34 +158,8 @@ $max: max-width;
             margin: unset;
             text-align: unset;
             padding: 0 60px;
-            
             &:nth-child(3) {
                 padding-right: 0;
-            
-            }
-            a {
-                text-decoration: none;
-                color: color(tertiary);
-                font-size: size(nav-links);
-                font-weight: weight(black);
-                text-transform: uppercase;
-                position: relative;
-            }
-            a::before {
-                content: "";
-                position: absolute;
-                width: 100%;
-                height: 2px;
-                bottom: 0;
-                left: 0;
-                background-color: color(primary);
-                visibility: hidden;
-                transform: scaleX(0);
-                transition: all 0.3s ease-in-out 0s;
-            }
-            a:hover::before {
-                visibility: visible;
-                transform: scaleX(1);
             }
         }
     }
@@ -194,67 +167,35 @@ $max: max-width;
 
 .welcome {
   display: flex;
-  position: relative;
   align-items: flex-end;
 }
 
 .greeting {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   height: 490px;
-  align-items: flex-start;
-  position: relative;
-  z-index: 1;
   margin-bottom: unset;
 }
 
-.greeting-text {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 240px;
-}
-
 .hello {
-  font-size: size(hello);
-  text-transform: uppercase;
   width: 700px;
 }
 
 .name {
   display: inline-block;
   width: 700px;
-  font-size: size(name);
-}
-
-.sub-title {
-  font-size: size(sub-title);
-  font-weight: weight(light);
-  width: 100%;
 }
 
 .box {
   position: absolute;
   width: 500px;
   height: 500px;
-  background: color(tertiary);
-  right: 0;
-  top: 40px;
   &::before {
-      content: url(/assets/pgram.svg);
-      display: inline-block;
-      position: absolute;
-      z-index: -1;
       top: -140px;
-      right: 0px;
   }
   img {
       position: absolute;
       top: 40px;
       right: 40px;
       width: 550px;
-      display: block;
   }
 }
 
@@ -278,7 +219,7 @@ $max: max-width;
     .hello {
       font-size: size(hello);
     }
-    .name {
+    .name, .section-heading {
       font-size: size(name);
     }
     .sub-title {
