--- a/styles/style.css
+++ b/styles/style.css
@@ -331,13 +331,13 @@ html, body, p, h1, h2, h3, h4, h5, h6, nav, ul, li, a, section, div, main, foote
   padding: 0;
 }
 
-body {
-  font-size: 1.6rem;
-}
-
 .wrapper {
   width: calc(100% - 40px);
   margin: 0 auto;
+}
+
+.section-heading {
+  text-transform: uppercase;
 }
 
 header {
@@ -433,6 +433,7 @@ header {
 
 .welcome {
   position: relative;
+  margin-bottom: 40px;
 }
 
 .greeting {
@@ -477,7 +478,6 @@ header {
 
 .name {
   display: inline-block;
-  font-size: 9.7rem;
 }
 
 .sub-title {
@@ -503,8 +503,6 @@ header {
 }
 
 .box img {
-  top: 40px;
-  right: 40px;
   width: 100%;
   display: block;
 }
@@ -540,7 +538,7 @@ header {
   .hello {
     font-size: 2.66rem;
   }
-  .name {
+  .name, .section-heading {
     font-size: 6.79rem;
   }
   .sub-title {
@@ -567,7 +565,7 @@ header {
   .hello {
     font-size: 2.85rem;
   }
-  .name {
+  .name, .section-heading {
     font-size: 7.275rem;
   }
   .sub-title {
@@ -591,7 +589,7 @@ header {
   .hello {
     font-size: 3.325rem;
   }
-  .name {
+  .name, .section-heading {
     font-size: 8.4875rem;
   }
   .sub-title {
@@ -625,111 +623,38 @@ header {
   .header-nav ul li:nth-child(3) {
     padding-right: 0;
   }
-  .header-nav ul li a {
-    text-decoration: none;
-    color: #000;
-    font-size: 2rem;
-    font-weight: 900;
-    text-transform: uppercase;
-    position: relative;
-  }
-  .header-nav ul li a::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    background-color: #1A196D;
-    visibility: hidden;
-    -webkit-transform: scaleX(0);
-            transform: scaleX(0);
-    -webkit-transition: all 0.3s ease-in-out 0s;
-    transition: all 0.3s ease-in-out 0s;
-  }
-  .header-nav ul li a:hover::before {
-    visibility: visible;
-    -webkit-transform: scaleX(1);
-            transform: scaleX(1);
-  }
   .welcome {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    position: relative;
     -webkit-box-align: end;
         -ms-flex-align: end;
             align-items: flex-end;
   }
   .greeting {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
     height: 490px;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
-    position: relative;
-    z-index: 1;
     margin-bottom: unset;
   }
-  .greeting-text {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    height: 240px;
-  }
   .hello {
-    font-size: 3.8rem;
-    text-transform: uppercase;
     width: 700px;
   }
   .name {
     display: inline-block;
     width: 700px;
-    font-size: 9.7rem;
-  }
-  .sub-title {
-    font-size: 4.3rem;
-    font-weight: 300;
-    width: 100%;
   }
   .box {
     position: absolute;
     width: 500px;
     height: 500px;
-    background: #000;
-    right: 0;
-    top: 40px;
   }
   .box::before {
-    content: url(/assets/pgram.svg);
-    display: inline-block;
-    position: absolute;
-    z-index: -1;
     top: -140px;
-    right: 0px;
   }
   .box img {
     position: absolute;
     top: 40px;
     right: 40px;
     width: 550px;
-    display: block;
   }
   .hire-me {
     -ms-flex-item-align: unset;
@@ -751,7 +676,7 @@ header {
   .hello {
     font-size: 3.8rem;
   }
-  .name {
+  .name, .section-heading {
     font-size: 9.7rem;
   }
   .sub-title {
