--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -122,7 +122,7 @@ header {
         display: inline-block;
         position: absolute;
         z-index: -1;
-        top: 0;
+        top: -100px;
         right: 0px;
     }
     img {
