minor fixes and changes fixed pathing, added favicon, centered project gallery

--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -118,7 +118,7 @@ header {
     right: 0;
     top: 40px;
     &::before {
-        content: url(/assets/pgram.svg);
+        content: url(../assets/pgram.svg);
         display: inline-block;
         position: absolute;
         z-index: -1;
