--- a/styles/sass/_responsive.scss
+++ b/styles/sass/_responsive.scss
@@ -66,6 +66,9 @@ $max: max-width;
     body {
       font-size: size(body) * 0.70;
     }
+    p {
+      font-size: size(para) * 0.70;
+    }
     .logo {
       font-size: size(logo) * 0.70;
     }
@@ -75,8 +78,14 @@ $max: max-width;
     .hello {
       font-size: size(hello) * 0.70;
     }
-    .name, .section-heading {
+    .name {
       font-size: size(name) * 0.70;
+    }
+    .section-heading {
+      font-size: size(name) * 0.60;
+    }
+    .section-heading-alt {
+      font-size: size(hello) * 0.70;
     }
     .sub-title {
       font-size: size(sub-title) * 0.70;
@@ -85,7 +94,7 @@ $max: max-width;
       font-size: size(button) * 0.70;
     }
 
-} // END OF MOBILE MEDIA QUERY
+} // END OF MAX PALM MEDIA QUERY
 
 @include mediaQuery($min, $palm) {
     .wrapper {
@@ -94,6 +103,9 @@ $max: max-width;
 
     body {
       font-size: size(body) * 0.75;
+    }
+    p {
+      font-size: size(para) * 0.75;
     }
     .logo {
       font-size: size(logo) * 0.75;
@@ -107,19 +119,41 @@ $max: max-width;
     .name, .section-heading {
       font-size: size(name) * 0.75;
     }
+    .section-heading-alt {
+      font-size: size(hello) * 0.75;
+    }
     .sub-title {
       font-size: size(sub-title) * 0.75;
     }
     .hire-me {
       font-size: size(button) * 0.75;
     }
-} // END OF PALM MEDIA QUERY
+
+    .projects {
+      margin-top: 180px;
+    }
+
+    .projects-gallery {
+      li {
+          margin: 10px;
+          img {
+              width: 390px;
+              height: 440px;
+          }
+      }
+  }
+
+
+} // END OF MIN PALM MEDIA QUERY
 
 
 @include mediaQuery($min, $tablet) {
   
   body {
     font-size: size(body) * 0.875;
+  }
+  p {
+    font-size: size(para) * 0.875;
   }
   .logo {
     font-size: size(logo) * 0.875;
@@ -132,6 +166,9 @@ $max: max-width;
   }
   .name, .section-heading {
     font-size: size(name) * 0.875;
+  }
+  .section-heading-alt {
+    font-size: size(hello) * 0.875;
   }
   .sub-title {
     font-size: size(sub-title) * 0.875;
@@ -148,7 +185,6 @@ $max: max-width;
     right: unset;
     width: unset;
     height: unset;
-
     ul {
         margin: unset;
         display: flex;
@@ -203,12 +239,14 @@ $max: max-width;
   align-self: unset;
 }
 
-
-} // END OF TABLET MEDIA QUERY
+} // END OF MIN TABLET MEDIA QUERY
 
 @include mediaQuery($min, $post-desktop) {
     body {
       font-size: size(body);
+    }
+    p {
+      font-size: size(para);
     }
     .logo {
       font-size: size(logo);
@@ -222,6 +260,9 @@ $max: max-width;
     .name, .section-heading {
       font-size: size(name);
     }
+    .section-heading-alt {
+      font-size: size(hello);
+    }
     .sub-title {
       font-size: size(sub-title);
     }
@@ -232,4 +273,4 @@ $max: max-width;
     .box img {
       width: unset;
     }
-} // END OF DESKTOP MEDIA QUERY
+} // END OF MIN POST-DESKTOP MEDIA QUERY
