--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -28,8 +28,11 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    height: 100vh;
+    // height: 100vh;
     // max-height: 1595px;
+    // display: flex;
+    // align-items: center;
+    padding: 50px 0;
     .wrapper {
         display: flex;
         flex-wrap: wrap;
@@ -38,29 +41,46 @@
 }
 
 .about-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     flex: 1;
+    // width: 100%;
+    // margin-bottom: 25px;
+    min-height: 400px;
     h3, p, a {
         color: color(quaternary);
+    }
+    p {
+        // width: 404px;
+        line-height: 1.6;
     }
 }
 
 .about-social-links {
     @include list-reset;
     display: flex;
+    // justify-content: space-between;
     li {
         border: 1px solid color(quaternary);
-        margin: 10px;
+        margin: 0 10px;
         padding: 10px;
         border-radius: 30px;
-
+        &:nth-child(1) {
+            margin-left: 0;
+        }
     }
 }
 
 .about-box {
-    flex-basis: 555px;
+    flex-basis: 400px;
+    // box-shadow: 45px -45px color(tertiary);
+    margin-top: 25px;
     img {
         width: 100%;
         display: block;
         // max-width: 95%;
-    }
+        position: relative;
+    }    
 }
+
