--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -13,7 +13,8 @@ $font-sizes: (
     hello: 3.8rem,
     name: 9.7rem,
     sub-title: 4.3rem,
-    button: 3.2rem
+    button: 3.2rem,
+    skills: 2.5rem
 );
 
 $font-weights: (
