--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -1,7 +1,7 @@
 // ==================================================
 // $Projects Section
 // ==================================================
-.projects {
+.projects-section {
     margin-top: 40px;
 }
 .projects-gallery {
@@ -23,8 +23,8 @@
 // ==================================================
 
 
-.about {
-    background-image: url(../assets/about-bg.jpg);
+.about-section {
+    background-image: linear-gradient(90deg,rgba(26,25,109,0.75) 70%, rgba(254,93,68,0.75) 70%), url(../assets/about-bg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -103,3 +103,105 @@
 // ==================================================
 // $Skills Section
 // ==================================================
+
+.skills-section {
+    padding: 50px 0;
+}
+
+.skills-gallery {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    width: 100%;
+    margin: 0 auto;
+    li {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        @include list-reset;
+        width: 125px;
+        height: 200px;
+        p {
+            font-size: size(skills);
+            font-weight: weight(regular);
+            text-align: center;
+            padding-bottom: 10px;
+        }
+        i {
+            color: color(quaternary);
+            background: linear-gradient(135deg, #1A196D 50%, #39367E 50%);            
+            width: 100px;
+            height: 100px;
+            border-radius: 50px;
+            &::before {
+                font-size: 5.6rem;
+                position: relative;
+            }
+        }
+        &:nth-child(1) i {
+            background: linear-gradient(135deg, #E44D26 50%, #F16529 50%);
+            &::before {
+                top: 26px;
+                left: 26px;
+            }
+        }
+        &:nth-child(2) i {
+            background: linear-gradient(135deg, #0170BA 50%, #29A9DF 50%);
+            &::before {
+                top: 26px;
+                left: 26px;
+            }
+        }
+        &:nth-child(3) i {
+            background: linear-gradient(135deg, #BF4080 50%, #CF649A 50%);
+            &::before {
+                top: 20px;
+                left: 20px;
+            }
+        }
+        &:nth-child(4) i {
+            background: linear-gradient(135deg, #F58233 50%, #F99D34 50%);
+            &::before {
+                top: 24px;
+                left: 24px;
+            }
+        }
+        &:nth-child(5) i {
+            background: linear-gradient(135deg, #06568E 50%, #0769AD 50%);
+            &::before {
+                top: 21px;
+                left: 35px;
+            }
+        }
+        &:nth-child(6) i {
+            background: linear-gradient(135deg, #24292E 50%, #404448 50%);
+            &::before {
+                top: 21px;
+                left: 35px;
+            }
+        }
+        &:nth-child(7) i {
+            background: linear-gradient(135deg, #32acce 50%, #61DAFB 50%);
+            &::before {
+                top: 21px;
+                left: 21px;
+            }
+        }
+        &:nth-child(8) i {
+            background: linear-gradient(135deg, #F5820B 50%, #FFA713 50%);
+            &::before {
+                top: 21px;
+                left: 30px;
+            }
+        }
+        &:nth-child(9) i {
+            background: linear-gradient(135deg, #1A196D 50%, #39367E 50%);
+            &::before {
+                top: 21px;
+                left: 33px;
+            }
+        }
+    }
+}
+
