--- a/styles/style.css
+++ b/styles/style.css
@@ -805,6 +805,100 @@ header {
   left: 33px;
 }
 
+.contact-section {
+  color: white;
+  padding: 100px 0;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5))), url(../assets/contact-bg.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5)), url(../assets/contact-bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.contact-section-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: calc(100% - 40px);
+  max-width: 600px;
+  margin: 0 auto;
+  margin: 25px auto 0 auto;
+}
+
+.contact-section-form label {
+  font-size: 2rem;
+}
+
+.contact-section-form input, .contact-section-form textarea {
+  background: white;
+  font-size: 2.2rem;
+  -webkit-box-flex: 100%;
+      -ms-flex: 100%;
+          flex: 100%;
+  padding: 10px;
+  margin: 10px 0 40px 0;
+  border: none;
+}
+
+.contact-section-form input:nth-child(7), .contact-section-form textarea:nth-child(7) {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.contact-section-form textarea {
+  overflow: auto;
+  resize: none;
+}
+
+footer {
+  padding: 50px 0;
+  background: #F9F9F9;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+footer h2, footer ul, footer p {
+  padding: 10px 0;
+}
+
+footer h2 {
+  text-transform: uppercase;
+}
+
+footer p {
+  border-top: 1px solid black;
+}
+
+.footer-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.footer-links li {
+  border: 1px solid black;
+  border-radius: 30px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  margin: 0 10px;
+  padding: 10px;
+}
+
+.footer-links li a {
+  color: black;
+}
+
 @media screen and (max-width: 640px) {
   body {
     font-size: 1.12rem;
