Footer section fully responsive updated highlight, highlight-alt added new font-size naming convention based on element.io

--- a/styles/sass/_preamble.scss
+++ b/styles/sass/_preamble.scss
@@ -24,3 +24,11 @@ p {
     color: color(secondary);
     text-transform: uppercase;
 }
+
+.highlight {
+    color: color(primary);
+}
+
+.highlight-alt {
+    color: color(secondary);
+}
