--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -14,7 +14,9 @@ $font-sizes: (
     name: 9.7rem,
     sub-title: 4.3rem,
     button: 3.2rem,
-    skills: 2.5rem
+    skills: 2.5rem,
+    font-33: 3.3rem,
+    font-22: 2.2rem, 
 );
 
 $font-weights: (
