--- a/styles/style.css
+++ b/styles/style.css
@@ -349,6 +349,14 @@ p {
   text-transform: uppercase;
 }
 
+.highlight {
+  color: #1A196D;
+}
+
+.highlight-alt {
+  color: #FE5D44;
+}
+
 header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -383,10 +391,6 @@ header {
   border: none;
   position: relative;
   z-index: 3;
-}
-
-.highlight {
-  color: #1A196D;
 }
 
 .header-nav {
@@ -853,8 +857,10 @@ header {
 }
 
 footer {
-  padding: 50px 0;
   background: #F9F9F9;
+}
+
+footer .logo-links {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -865,18 +871,28 @@ footer {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding: 40px 0;
 }
 
-footer h2, footer ul, footer p {
-  padding: 10px 0;
-}
-
-footer h2 {
+footer .logo-links h2 {
+  padding-bottom: 10px;
   text-transform: uppercase;
+  font-size: 3.3rem;
 }
 
-footer p {
-  border-top: 1px solid black;
+footer .logo-links ul {
+  padding-top: 10px;
+}
+
+footer .copyright-container {
+  border-top: 1px solid #EFEFEF;
+  padding: 20px 0;
+}
+
+footer .copyright-container p {
+  font-size: 2.2rem;
+  text-align: center;
+  padding: 0;
 }
 
 .footer-links {
