Fixed mobile menu anchors now work font is larger re-organized js

--- a/styles/sass/_responsive.scss
+++ b/styles/sass/_responsive.scss
@@ -73,7 +73,7 @@ $max: max-width;
       font-size: size(logo) * 0.70;
     }
     .header-nav ul li a {
-      font-size: size(nav-links) * 0.70;
+      font-size: size(font-40);
     }
     .hello {
       font-size: size(hello) * 0.70;
@@ -111,7 +111,7 @@ $max: max-width;
       font-size: size(logo) * 0.75;
     }
     .header-nav ul li a {
-      font-size: size(nav-links) * 0.75;
+      font-size: size(font-40);
     }
     .hello {
       font-size: size(hello) * 0.75;
