--- a/styles/sass/_footer.scss
+++ b/styles/sass/_footer.scss
@@ -33,11 +33,16 @@ footer {
 .footer-links {
     display: flex;
     li {
-        border: 1px solid black;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         border-radius: 30px;
-        @include list-reset;
         margin: 0 10px;
-        padding: 10px;
+        width: 60px;
+        height: 60px;
+        font-size: 3rem;
+
+        border: 1px solid black;
         a {
             color: black;
         }
