--- a/styles/style.css
+++ b/styles/style.css
@@ -632,10 +632,21 @@ header {
 }
 
 .about-social-links li {
-  border: 1px solid #FFF;
-  margin: 0 10px;
-  padding: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   border-radius: 30px;
+  margin: 0 10px;
+  width: 60px;
+  height: 60px;
+  font-size: 3rem;
+  border: 1px solid #FFF;
 }
 
 .about-social-links li:nth-child(1) {
@@ -723,6 +734,15 @@ header {
 }
 
 .skills-gallery li i {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   color: #FFF;
   background: linear-gradient(135deg, #1A196D 50%, #39367E 50%);
   width: 100px;
@@ -732,88 +752,42 @@ header {
 
 .skills-gallery li i::before {
   font-size: 5.6rem;
-  position: relative;
 }
 
 .skills-gallery li:nth-child(1) i {
   background: linear-gradient(135deg, #E44D26 50%, #F16529 50%);
 }
 
-.skills-gallery li:nth-child(1) i::before {
-  top: 26px;
-  left: 26px;
-}
-
 .skills-gallery li:nth-child(2) i {
   background: linear-gradient(135deg, #0170BA 50%, #29A9DF 50%);
-}
-
-.skills-gallery li:nth-child(2) i::before {
-  top: 26px;
-  left: 26px;
 }
 
 .skills-gallery li:nth-child(3) i {
   background: linear-gradient(135deg, #BF4080 50%, #CF649A 50%);
 }
 
-.skills-gallery li:nth-child(3) i::before {
-  top: 20px;
-  left: 20px;
-}
-
 .skills-gallery li:nth-child(4) i {
   background: linear-gradient(135deg, #F58233 50%, #F99D34 50%);
-}
-
-.skills-gallery li:nth-child(4) i::before {
-  top: 24px;
-  left: 24px;
 }
 
 .skills-gallery li:nth-child(5) i {
   background: linear-gradient(135deg, #06568E 50%, #0769AD 50%);
 }
 
-.skills-gallery li:nth-child(5) i::before {
-  top: 21px;
-  left: 35px;
-}
-
 .skills-gallery li:nth-child(6) i {
   background: linear-gradient(135deg, #24292E 50%, #404448 50%);
-}
-
-.skills-gallery li:nth-child(6) i::before {
-  top: 21px;
-  left: 35px;
 }
 
 .skills-gallery li:nth-child(7) i {
   background: linear-gradient(135deg, #32acce 50%, #61DAFB 50%);
 }
 
-.skills-gallery li:nth-child(7) i::before {
-  top: 21px;
-  left: 21px;
-}
-
 .skills-gallery li:nth-child(8) i {
   background: linear-gradient(135deg, #F5820B 50%, #FFA713 50%);
 }
 
-.skills-gallery li:nth-child(8) i::before {
-  top: 21px;
-  left: 30px;
-}
-
 .skills-gallery li:nth-child(9) i {
   background: linear-gradient(135deg, #1A196D 50%, #39367E 50%);
-}
-
-.skills-gallery li:nth-child(9) i::before {
-  top: 21px;
-  left: 33px;
 }
 
 .contact-section {
@@ -909,13 +883,21 @@ footer .copyright-container p {
 }
 
 .footer-links li {
-  border: 1px solid black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   border-radius: 30px;
-  margin: 0;
-  padding: 0;
-  list-style: none;
   margin: 0 10px;
-  padding: 10px;
+  width: 60px;
+  height: 60px;
+  font-size: 3rem;
+  border: 1px solid black;
 }
 
 .footer-links li a {
